--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Faça seu Curriculo</title>
 </head>
 <body>
@@ -124,5 +125,6 @@
         </div>
     </main>
     
+    <script src="script.js"></script>
 </body>
 </html>
