Minor corrections to inconsistencies and changes to the text color of the curriculum.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
 
     <main>
-
         <section>
             <div class="section-container-curriculo">
                 <h2 class="title-curriculo">  Importância do Curriculo </h2>
@@ -26,12 +25,12 @@
         <div class="container">
             <form id="form">
 
-                <input type="text" id="name" placeholder="Nome">
+                <input type="text" id="name" placeholder="Nome" autocomplete="name">
                 <input type="text" id="road" placeholder="Endereço">
                 <input type="text" id="house-number" placeholder="Número da casa" maxlength="6">
                 <input type="text" id="state" placeholder="Estado">
                 <input type="text" id="phone-number" placeholder="Número de telefone" maxlength="15">  
-                <input type="text" id="email" placeholder="Email">
+                <input type="text" id="email" placeholder="Email" autocomplete="email">
                 <input type="text" id="objective" placeholder="Objetivo">
                 <input type="text" id="formation-name" placeholder="Formação escolar">
                 <input type="text" id="mudule" placeholder="Semestre">
